Bug 1109405 - Fix shutdown of MediaEngineWebRTC sources with multiple attached streams. r=jesup